F: more process pics; fixed modal spacing a bit

--- a/final/public/css/modal.css
+++ b/final/public/css/modal.css
@@ -51,9 +51,15 @@
 }
 
 #messageBox input {
+  margin-top: 10px;
   width: 100%;
-
+  font-size: 1.3em;
   padding-bottom: 20%;
+}
+
+#messageBox label {
+  font-size: 1.2em;
+  margin-bottom: 50px;
 }
 
 .submitBtn {
@@ -61,6 +67,7 @@
   color: white;
   border-radius: 10px;
   border: white solid 1px;
+  font-size: 1.2em;
   margin: 2%;
   background-color: rgba(0, 0, 0, 0);
 }
